fix body height for footer alignment

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  min-height: initial !important; /*bir yerlerden height geliyordu, sıfırladım*/
+  height: initial !important; /*bir yerlerden height geliyordu, sıfırladım*/
 }
 body > #root{
   height: 100%;
